--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,265 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #f1f1f1;
+}
+.navbar {
+  background: black;
+  height: 70px;
+  padding: 10px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.search-container input {
+  height: 43px;
+  width: 80%;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  border: none;
+  font-size: 16px;
+  padding: 0 10px;
+  box-sizing: border-box;
+  flex-shrink: 2;
+}
+.search-container {
+  position: relative;
+  width: 65%;
+}
+.search-results {
+  position: absolute;
+  background: rgb(243 251 255);
+  width: 80%;
+  box-sizing: border-box;
+  border: 1px solid #e1e1e1;
+  top: 42px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  z-index: 100;
+}
+.search-result .movie-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.search-result .movie-info button {
+  margin: 20px 10px;
+  background: #21ba45;
+  color: #fff;
+  font-weight: 600;
+  font-size: 14px;
+  border: none;
+  padding: 9px 0;
+  border-radius: 4px;
+  width: 110px;
+}
+.search-result {
+  display: flex;
+  flex-direction: row;
+}
+.search-result img {
+  height: 150px;
+  width: 150px;
+}
+.search-result > div span {
+  font-size: 20px;
+  padding: 10px;
+  font-weight: 600;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.search-container input:focus,
+.search-container button:focus,
+.footer button:focus,
+.search-result .movie-info button:focus {
+  outline: none;
+}
+.search-container button:hover,
+.footer button:hover,
+.search-result .movie-info button:hover {
+  cursor: pointer;
+}
+#search-btn {
+  background: #f2711c;
+  height: 43px;
+  color: #fff;
+  border: none;
+  font-size: 15px;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+  position: relative;
+  top: -1px;
+  width: 20%;
+}
+.main {
+  width: 70%;
+  margin: 0 auto;
+  margin-top: 30px;
+  padding: 0 20px;
+  box-sizing: border-box;
+}
+.main .tabs {
+  display: flex;
+  font-size: 20px;
+}
+.main .tabs .tab {
+  background: #fff;
+  padding: 10px;
+  margin-right: 13px;
+  border-radius: 3px;
+  border: 1px solid #e1e1e1;
+}
+.active-tabs {
+  background: #2185d0 !important;
+  color: white;
+}
+.main .tabs .tab:hover {
+  cursor: pointer;
+  background: #e1e1e1;
+}
+
+.movie-card:not(:first-child) {
+  margin-top: 20px;
+}
+.movie-card:last-child {
+  margin-bottom: 50px;
+}
+.movie-card {
+  background: #fff;
+  padding: 0;
+  border: none;
+  border-radius: 3px;
+  box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #f1f1f1;
+}
+.movie-card .left {
+  width: 100%;
+  display: block;
+}
+.movie-card .left img {
+  height: 300px;
+  width: 100%;
+}
+.movie-card .right {
+  width: 100%;
+  display: block;
+}
+.title {
+  padding: 10px 20px;
+  font-size: 25px;
+  font-weight: 600;
+  text-align: center;
+}
+.plot {
+  padding: 0 20px;
+}
+.footer {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 10px 20px;
+  box-sizing: border-box;
+}
+.footer .rating {
+  font-size: 20px;
+  font-weight: 600;
+}
+.footer button {
+  font-size: 15px;
+  padding: 7px 10px;
+  text-shadow: none;
+  border-radius: 3px;
+  border: none;
+  font-weight: 600;
+}
+.favourite-btn {
+  background-color: #2185d0;
+  color: #fff;
+}
+.unfavourite-btn {
+  background-color: #db2828;
+  color: #fff;
+  text-shadow: none;
+}
+.no-movies {
+  padding: 20px 0;
+  font-size: 20px;
+  color: #6d6d6d;
+}
+.not {
+  color: red;
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+}
+
+/*Media Queries*/
+
+@media screen and (min-width: 500px) {
+  .movie-card {
+    background: #fff;
+    padding: 0;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #f1f1f1;
+    display: flex;
+  }
+  .movie-card .left {
+    flex: 1;
+  }
+  .movie-card .left img {
+    height: 250px;
+    max-width: 200px;
+  }
+  .movie-card .right {
+    position: relative;
+    flex: 2;
+  }
+  .movie-card .title {
+    padding: 10px 20px;
+    font-size: 25px;
+    font-weight: 600;
+  }
+  .movie-card .plot {
+    margin-top: 20px;
+    padding: 0 20px;
+  }
+  .footer {
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 10px 20px;
+    box-sizing: border-box;
+  }
+  .footer .rating {
+    font-size: 20px;
+    font-weight: 600;
+  }
+  .footer button {
+    font-size: 15px;
+    padding: 7px 10px;
+    text-shadow: none;
+    border-radius: 3px;
+    border: none;
+    font-weight: 600;
+  }
+}
+@media screen and (min-width: 900px) {
+  .movie-card .right {
+    position: relative;
+    flex: 3.5;
+  }
+}
+@media screen and (max-width: 600px) {
+  .search-container {
+    width: 90%;
+  }
+  .main {
+    width: 100%;
+  }
 }
